# aibom

./: .env.example  .gitignore  =2.2.0  Dockerfile  LICENSE  QUICKSTART.md  README.md  README_HF.md  pyproject.toml  requirements.txt  run.py  setup.py
Golden_Set/: AIBOM_Golden-Set_enhanced.csv  AIBOM_Golden-Set_main-version.csv  DataBOM_Golden-Set_enhanced.csv  DataBOM_Golden-Set_main-version.csv
docs/: FIELD_STRATEGIES.md  HF_SPACES.md  LOCAL_EMBEDDINGS.md  README.md  SPDX_3.0.1_FIELD_REFERENCE.json  SPDX_3.0.1_FIELD_REFERENCE.md  migration.md  optimized_question_bank.json  question_bank.json
examples/: example_ai_bom.py  example_data_bom.py  sample-ouput.json  sample-output.json
goldenset_results/aibom-generator/cyclonedx-1.6/: BAAI_bge-small-en-v1.5_ai_sbom.html  BAAI_bge-small-en-v1.5_ai_sbom_1_6.json  Bingsu_adetailer_ai_sbom.html  Bingsu_adetailer_ai_sbom_1_6.json  FacebookAI_roberta-large_ai_sbom.html  FacebookAI_roberta-large_ai_sbom_1_6.json  Falconsai_nsfw_image_detection_ai_sbom.html  Falconsai_nsfw_image_detection_ai_sbom_1_6.json  Kijai_WanVideo_comfy_ai_sbom.html  Kijai_WanVideo_comfy_ai_sbom_1_6.json  OpenMuQ_MuQ-large-msd-iter_ai_sbom.html  OpenMuQ_MuQ-large-msd-iter_ai_sbom_1_6.json  Qwen_Qwen2.5-7B-Instruct_ai_sbom.html  Qwen_Qwen2.5-7B-Instruct_ai_sbom_1_6.json  alana89_TabSTAR_ai_sbom.html  alana89_TabSTAR_ai_sbom_1_6.json  amazon_chronos-2_ai_sbom.html  amazon_chronos-2_ai_sbom_1_6.json  autogluon_chronos-bolt-base_ai_sbom.html  autogluon_chronos-bolt-base_ai_sbom_1_6.json  autogluon_chronos-bolt-small_ai_sbom.html  autogluon_chronos-bolt-small_ai_sbom_1_6.json  cardiffnlp_twitter-roberta-base-sentiment-latest_ai_sbom.html  cardiffnlp_twitter-roberta-base-sentiment-latest_ai_sbom_1_6.json  cross-encoder_ms-marco-MiniLM-L6-v2_ai_sbom.html  cross-encoder_ms-marco-MiniLM-L6-v2_ai_sbom_1_6.json  distilbert_distilbert-base-uncased_ai_sbom.html  distilbert_distilbert-base-uncased_ai_sbom_1_6.json  google-bert_bert-base-uncased_ai_sbom.html  google-bert_bert-base-uncased_ai_sbom_1_6.json  jinaai_jina-embeddings-v3_ai_sbom.html  jinaai_jina-embeddings-v3_ai_sbom_1_6.json  laion_clap-htsat-fused_ai_sbom.html  laion_clap-htsat-fused_ai_sbom_1_6.json  meta-llama_Llama-3.1-8B-Instruct_ai_sbom.html  meta-llama_Llama-3.1-8B-Instruct_ai_sbom_1_6.json  omni-research_Tarsier2-Recap-7b_ai_sbom.html  omni-research_Tarsier2-Recap-7b_ai_sbom_1_6.json  openai_clip-vit-base-patch32_ai_sbom.html  openai_clip-vit-base-patch32_ai_sbom_1_6.json  (+10 more)
goldenset_results/aibom-generator/spdx/: BAAI_bge-small-en-v1.5_spdx_3_0_1.json  Bingsu_adetailer_spdx_3_0_1.json  FacebookAI_roberta-large_spdx_3_0_1.json  Falconsai_nsfw_image_detection_spdx_3_0_1.json  Kijai_WanVideo_comfy_spdx_3_0_1.json  OpenMuQ_MuQ-large-msd-iter_spdx_3_0_1.json  Qwen_Qwen2.5-7B-Instruct_spdx_3_0_1.json  alana89_TabSTAR_spdx_3_0_1.json  amazon_chronos-2_spdx_3_0_1.json  autogluon_chronos-bolt-base_spdx_3_0_1.json  autogluon_chronos-bolt-small_spdx_3_0_1.json  cardiffnlp_twitter-roberta-base-sentiment-latest_spdx_3_0_1.json  cross-encoder_ms-marco-MiniLM-L6-v2_spdx_3_0_1.json  distilbert_distilbert-base-uncased_spdx_3_0_1.json  google-bert_bert-base-uncased_spdx_3_0_1.json  jinaai_jina-embeddings-v3_spdx_3_0_1.json  laion_clap-htsat-fused_spdx_3_0_1.json  meta-llama_Llama-3.1-8B-Instruct_spdx_3_0_1.json  omni-research_Tarsier2-Recap-7b_spdx_3_0_1.json  openai_clip-vit-base-patch32_spdx_3_0_1.json  pyannote_segmentation-3.0_spdx_3_0_1.json  sentence-transformers_all-MiniLM-L6-v2_spdx_3_0_1.json  sentence-transformers_paraphrase-multilingual-mpnet-base-v2_spdx_3_0_1.json  timm_mobilenetv3_small_100.lamb_in1k_spdx_3_0_1.json  (+1 more)
scripts/: deploy_to_hf_spaces.sh  setup_env.sh  verify_structure.sh
scripts/goldenset/: README.md  cdx_to_spdx.py  run_pipeline.sh
src/aikaboom/: __init__.py  cli.py
src/aikaboom/core/: processors.py  (+5 more)
src/bom_tools/: __init__.py  cli.py
tests/: baseline_existing_output.txt  baseline_output.txt  different_configs.sh  final_output.txt  test_chunk_filter.py  test_cli_list_models.py  test_cli_provider_detection.py  test_conflict_parser.py  test_conflict_routing.py  test_cyclonedx_exporter.py  test_cyclonedx_validator.py  test_direct_fields.py  test_integration.py  test_internal_conflict.py  test_link_fallback.py  test_metadata_fetcher.py  test_models_endpoint.py  test_normalisation.py  test_openrouter_integration.py  test_openrouter_models.py  test_phase8_fixes.py  test_phase9_fixes.py  test_pipeline_features.py  test_processors.py  test_processors_extended.py  test_prompt.py  test_question_bank.py  test_question_bank_descriptions.py  test_question_bank_extraction.py  test_question_bank_optimized.py  test_rag_fields.py  test_recursive_bom.py  test_recursive_enrich.py  test_regression.py  test_security.py  test_smoke.py  test_source_handler.py  test_source_priority.py  test_spdx_validation_hardened.py  test_spdx_validator.py  (+3 more)
tools/: build_master_question_bank.py  harvest_spdx_3_0_1.py  install_sbom_utility.sh  optimize_question_bank.prompt.md  optimize_question_bank.py  review_optimized_question_bank.py  sync_question_bank_descriptions.py
(+122 files in other folders)
