[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bom-tools"
version = "1.0.0"
description = "Unified AI Model and Dataset BOM Generator with RAG"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["bom", "ai", "dataset", "rag", "spdx", "metadata"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "flask>=3.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20",
    "langchain-huggingface>=0.0.1",
    "langgraph>=0.0.20",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
    "PyGithub>=2.1.1",
    "huggingface-hub>=0.20.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pymupdf>=1.23.0",
    "certifi>=2023.0.0",
    "urllib3>=2.0.0",
]

[project.optional-dependencies]
link_fallback = [
    "google-genai>=0.3.0",
    "httpx>=0.25.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
bom-tools = "bom_tools.web.app:main"

[project.urls]
Homepage = "https://github.com/yourusername/BOM_Tools"
Documentation = "https://github.com/yourusername/BOM_Tools/docs"
Repository = "https://github.com/yourusername/BOM_Tools"
Issues = "https://github.com/yourusername/BOM_Tools/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bom_tools.web" = ["templates/*.html", "static/*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=bom_tools --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
